--- a/doc/pcal.man
+++ b/doc/pcal.man
@@ -10,6 +10,37 @@
 .\"    
 .\" Revision History:
 .\"
+.\" 4.11.0
+.\"     
+.\"    2007-12-15 -- changes by Bill Marr (marr99@users.sourceforge.net): 
+.\"    
+.\"       Update version number and date.
+.\"       
+.\"       Describe newly-added languages: Slovak and Hawaiian
+.\"       
+.\"       Describe use of newly-added "on" preposition.
+.\"       
+.\"       Describe use of newly-added '-W' option.
+.\"       
+.\"       Remove 'F13' as a pre-defined event, now that the new 'on'
+.\"       preposition allows that event to be specified generically.
+.\"       
+.\"       Add long-missing descriptions of predefined symbols for 'paper size'
+.\"       and 'page orientation'.
+.\"       
+.\"       Mention the 'examples' directory and all the useful files contained
+.\"       within. 
+.\"       
+.\"       Mention the 'recycle.eps' EPS image file that comes with the 'pcal'
+.\"       distribution and give an example of how to use it.
+.\"       
+.\"       Mention the use of ImageMagick's 'convert' utility and the 'rsvg'
+.\"       utility to convert SVG images into EPS format.
+.\"       
+.\"       Fix a minor capitalization typo and a minor spelling error.
+.\"       
+.\"       Make various other minor tweaks and updates.
+.\"       
 .\" 4.10.0
 .\"     
 .\"    2006-07-12 -- changes by Bill Marr (marr99@users.sourceforge.net): 
@@ -204,7 +235,7 @@
 .\"       this manual page easier to read.
 .\"    
 .\" 
-.TH PCAL 1 "06 Aug 2006" "Version 4.10.0" "USER COMMANDS"
+.TH PCAL 1 "18 Dec 2007" "Version 4.11.0" "USER COMMANDS"
 .SH NAME
 pcal \- generate PostScript (or HTML) calendars
 .SH SYNOPSIS
@@ -250,6 +281,7 @@ pcal \- generate PostScript (or HTML) calendars
 [\fB\-a\fP\ \fIoutput_language\fP\|]
 [\fB\-r\fP\ [\fImapping\fP]
 [\fB\-T\fP\ [B|I|R]]
+[\fB\-W\fP\ [left|center|right]]
 [month]
 [year]
 [nmonths]
@@ -302,17 +334,18 @@ months are printed, rounded up to the nearest multiple of 12.
 
 .\" ------------------------------------------------------------------
 
-.SS The Date File
+.SS The Date File (Configuration File)
 
 By default,
 .I pcal
 simply prints an empty calendar.  Its real power is in its ability to place
-``events'' (and, for monthly PostScript calendars, Encapsulated PostScript
-images [e.g. photos and icons]) in appropriate days on the calendar, thus
-allowing the user to create personalized calendars.  This is achieved through
-the use of the ``date file''.
+``events'' (and, for monthly-format PostScript calendars, Encapsulated
+PostScript images [e.g. photos and icons]) in appropriate days on the
+(PostScript or HTML) calendar, thus allowing the user to create personalized
+calendars.  This is achieved through the use of the ``date file'', also known
+as the ``configuration file''.
 .PP
-The date file is named
+The default date/configuration file is expected to be named
 .IR \.calendar " (" pcal.dat
 under MS-DOS),
 or
@@ -348,6 +381,16 @@ can be found) can be specified using the
 .B \-f
 command-line option.  See the \fBOPTIONS\fP section for more details.
 .PP
+Every 
+.I pcal
+distribution comes with an 'examples' directory.  The `pcal-cfg.txt' file that
+is located there contains a myriad of examples of settings that can be used in
+your own configuration file.  Please check it out for lots of useful ideas.
+Furthermore, that directory contains several language/country-specific
+examples (including holiday and other event definitions) in various
+`calendar_xx.txt' files, where `xx' represents the 2-letter language code
+(e.g. 'calendar_de.txt' is the German example file).
+.PP
 If a date file is found, it will be searched for lines with
 leading dates matching the requested month and year.
 .PP
@@ -358,14 +401,16 @@ handled similarly as described in a later subsection.
 \fBtroff\fP-style escape sequences \\fB, \\fI,
 \\fP, and \\fR may be used to set the font style to Bold, Italic, the previous
 font style, or Roman respectively.  For those more familiar with HTML,
-<B>, <I>, and </B> or </I> may be used instead to set the font style to Bold,
-Italic, or
-the previous font style respectively.  The font style is reset to Roman after
-each line break.
+<B>, <I>, </B>, and </I> may be used instead to enable/disable Bold or
+Italic font styles.  The font style is reset to Roman after each line break.
 .PP
-Dates in the
-.I \.calendar
-file may be expressed in any of several formats:
+Using the `include' pre-processor directive (described in the section entitled
+`Pre-Processor Functionality', below), other configuration files can be
+processed from within an existing configuration file.  That is, you can `nest'
+configuration files as needed.
+.PP
+Dates (essentially `events') in the configuration files may be expressed in
+any of several formats:
 .RS
 .LP
 .IP \(bu 2
@@ -408,14 +453,14 @@ with which it `collides'.
 ``last'', ``odd'', ``even'', or ``all''
 .TP
 	<prep>
-:= ``before'', ``preceding'', ``after'', ``following'', ``on_or_before''
+:= ``on'', ``before'', ``preceding'', ``after'', ``following'', ``on_or_before''
 (``oob''), ``on_or_after'' (``ooa''), ``nearest'', ``nearest_before``, or
 ``nearest_after``
 .TP
 	<pre_defined_event>
 := ``Christmas'', ``Thanksgiving'', ``Easter'', ``Good_Friday'', ``GEaster''
-(Orthodox Easter), ``Gstgeorge'' (Orthodox holiday), ``Gmarcus'' (Orthodox
-holiday), and ``F13'' (Friday the 13th, for the superstitious among us).
+(Orthodox Easter), ``Gstgeorge'' (Orthodox holiday), and ``Gmarcus'' (Orthodox
+holiday).
 .TP
 	<sep>
 := one or more non-numeric, non-space, non-`*' characters
@@ -487,7 +532,7 @@ Examples:
 	25 Dec*                     Christmas     # European
 	25. Dec*                    Christmas     # European
 .sp
-	F13                   Avoid black cats!   # 'Friday the 13th'
+	Fri on all 13               Avoid black cats!   # 'Friday the 13th'
 .fi
 .ft
 .PP
@@ -566,9 +611,7 @@ Un*x
 .B \-c
 flag) input.
 .PP
-Lines in the
-.I \.calendar
-file consisting of 
+Lines in the configuration file consisting of 
 .B year ####
 (where
 .B ####
@@ -577,9 +620,7 @@ to set the year for following entries.  This assumes that the following
 entries do not contain a year; any date entries containing year information
 will set the remembered year to that year.
 .PP
-Lines in the
-.I \.calendar
-file consisting of 
+Lines in the configuration file consisting of 
 .B year all
 (or, alternatively, \fByear *\fP) direct \fIpcal\fP to wildcard
 following entries against every applicable year.  This assumes
@@ -588,9 +629,7 @@ entries do not contain a year; any date entries containing year information
 (or an explicit \fByear ####\fP entry) will set the remembered year
 to that year.
 .PP
-Lines in the
-.I \.calendar
-file consisting of 
+Lines in the configuration file consisting of 
 .B opt <options>
 can be used to override the defaults for
 any command-line options except
@@ -606,9 +645,7 @@ any command-line options except
 Any options specified in this manner
 are, in turn, overridden by those specified explicitly on the command line.
 .PP
-Lines in the
-.I \.calendar
-file consisting of
+Lines in the configuration file consisting of
 .B note{/<number>} <month>
 can be used to place notes regarding the
 entire month in one of the unused blocks of the calendar.  The
@@ -636,9 +673,7 @@ and
 below).  You can place several notes in the same box.  You can also use more
 than 1 box for the various monthly notes.
 .PP
-Lines in the
-.I \.calendar
-file consisting of 
+Lines in the configuration file consisting of 
 .B input-language XX
 (where
 .B XX
@@ -652,10 +687,9 @@ distinct from the specification of 'output language' as accomplished with the
 .B \-a
 option.
 .PP
-Comments are supported in the
-.I \.calendar
-file.  Any characters following a `#' character are ignored, through the end
-of that line, unless the `#' character is escaped by `\\'.
+Comments are supported in the configuration file.  Any characters following a
+`#' character are ignored, through the end of that line, unless the `#'
+character is escaped by `\\'.
 
 .\" ------------------------------------------------------------------
 
@@ -677,10 +711,10 @@ delete first Friday in all  Poker game
 .fi
 .RE
 .LP
-This results in an event labelled `Poker game' on every Friday except the
-first Friday of the month.  If you delete an entry which is marked as a
-holiday, the `holiday' flag for that day will be recalculated.  Any `delete'
-entries which don't match any pre-existing entries are silently ignored.
+This results in an event labeled `Poker game' on every Friday except the first
+Friday of the month.  If you delete an entry which is marked as a holiday, the
+`holiday' flag for that day will be recalculated.  Any `delete' entries which
+don't match any pre-existing entries are silently ignored.
 
 .\" ------------------------------------------------------------------
 
@@ -942,6 +976,19 @@ U.S. ``Presidents' Day'' holiday, along with the event text:
 Note that the icon for Lincoln is shifted to the right by 48 typographic
 points so as not to overlay the first icon.
 .PP
+The
+.I pcal
+releases come with a single EPS sample file ('eps/recycle.eps') of the
+ubiquitous 'recycle' icon (3 green arrows in a triangular shape).  Such an
+image might be used with configuration file settings like this:
+.PP
+.ft CW
+.nf
+	second Sat in all RECYCLE!
+	second Sat in all image:/eps-path/recycle.eps 0.039 0.039 34 -9
+.fi
+.ft
+.PP
 In cases where you're displaying non-holiday event text (e.g. someone's
 birthday) and an EPS image, you'll often need to use a negative `Y-delta'
 value on the EPS image specification line, in order to shift the image down so
@@ -985,7 +1032,9 @@ gv (version 3.5.8) -- EPS images appear fine
 .IP \(bu 2
 ggv (versions 2.4.0.1 and 2.6.1) -- EPS images appear fine
 .IP \(bu 2
-kghostview (versions 0.13.2 [KDE 3.1.4] and 0.2.0 [KDE 3.2.3 and 3.3.2]) -- EPS images DO NOT APPEAR!
+older kghostview (versions 0.13.2 [KDE 3.1.4] and 0.2.0 [KDE 3.2.3 and 3.3.2]) -- EPS images DO NOT APPEAR!
+.IP \(bu 2
+newer kghostview (version 0.2.0 [KDE 3.4.2 and 3.5.4]) -- EPS images appear fine
 .RE
 .LP
 .RE
@@ -993,26 +1042,54 @@ kghostview (versions 0.13.2 [KDE 3.1.4] and 0.2.0 [KDE 3.2.3 and 3.3.2]) -- EPS 
 .RE
 .LP
 For converting non-EPS images (e.g. photos) to EPS format, one can use the
-graphical image manipulation program called `The Gimp':
+graphical GNU Image Manipulation Program, a.k.a. `The GIMP':
 .RS
 .LP
 .IR http://www.gimp.org
 .RE
+
 .LP
-For icons in WMF format (which are popular in various 3rd-party, legacy-OS,
-commercial calendar programs), the `libwmf'/`wmf2eps' library/utility is
-useful for generating
+For icons/images in WMF format (which are popular in various 3rd-party,
+legacy-OS, commercial calendar programs), the `libwmf'/`wmf2eps'
+library/utility is useful for generating
 .IR pcal -capable
-EPS icons.  It can be found at this site:
+EPS images.  It can be found at this site:
 .RS
 .LP
 .IR http://wvware.sourceforge.net/libwmf.html
 .RE
-.LP
 
+.LP
+For icons/images in SVG format, the ImageMagick `convert' utility is sometimes
+useful for generating
+.IR pcal -capable
+EPS images.  This suite of utilities (which includes other useful ImageMagick
+utilities like `display' and `identify') may already be available on your
+Linux distribution.  If not, it can be found at this site:
+.RS
+.LP
+.IR http://www.imagemagick.org
+.RE
+
+.LP
+For cases where ImageMagick's `convert' utility fails to properly convert
+SVG-format images to EPS format, you can try the method of converting the SVG
+image into an intermediate format (e.g. PNG) using the `rsvg' utility.  This
+utility may already be available on your Linux distribution.  If not, it can
+be found at this site:
+.RS
+.LP
+.IR http://librsvg.sourceforge.net/
+.RE
+.LP
+From the PNG format, the image can often then be successfully converted to EPS
+format, using the above-mentioned ImageMagick `convert' utility.
+
+.LP
 The 
 .I Open Clip Art Library
-is a good source of freely-usable images for decorating your events:
+is a good source of freely-usable images (many of which are in SVG format) for
+decorating your events:
 .RS
 .LP
 .IR http://www.openclipart.org
@@ -1128,7 +1205,7 @@ is smart enough to translate
 .B ~/
 to the user's home directory.
 .PP
-.I pcal
+.I Pcal
 normally terminates immediately if the file specified in an
 .BR include
 directive does not exist.  An alternate form of the directive,
@@ -1363,9 +1440,27 @@ instead of to stdout.
 .TP
 .B \-l
 Causes the output to be in landscape mode (default).
+.PP
+
+.IP
+.I Pcal
+predefines the symbol `ORIENTATION_LANDSCAPE' whenever `landscape' page
+orientation is enabled.  This can be useful for providing alternate values in
+the configuration file for EPS image placement and scaling, based on the page
+orientation.
+
 .TP
 .B \-p
 Causes the output to be in portrait mode.
+.PP
+
+.IP
+.I Pcal
+predefines the symbol `ORIENTATION_PORTRAIT' whenever `portrait' page
+orientation is enabled.  This can be useful for providing alternate values in
+the configuration file for EPS image placement and scaling, based on the page
+orientation.
+
 .TP
 .B \-P
 Selects the paper size.  The following sizes are supported:
@@ -1383,6 +1478,27 @@ tabloid \(em 11.0 x 17.0 inches
 .RE
 .RE
 .LP
+
+.RS
+.I Pcal
+predefines one of the following symbols based on the current paper size:
+.RS
+.LP
+.IP \(bu 2
+PAPERSIZE_LETTER
+.IP \(bu 2
+PAPERSIZE_LEGAL
+.IP \(bu 2
+PAPERSIZE_A4
+.IP \(bu 2
+PAPERSIZE_TABLOID
+.RE
+.LP
+These symbol definitions can be useful for providing alternate values in the
+configuration file for EPS image placement and scaling, based on paper size.
+.RE
+.LP
+
 .TP
 .B \-j
 Causes the Julian date (day of year) to be printed in each calendar box.
@@ -1756,6 +1872,8 @@ Currently, the following languages are supported:
 (Finnish),
 .B fr
 (French),
+.B ha
+(Hawaiian),
 .B hu
 (Hungarian),
 .B it
@@ -1774,6 +1892,8 @@ Currently, the following languages are supported:
 (Romanian),
 .B ru
 (Russian),
+.B sk
+(Slovak),
 .B sv
 (Swedish),
 and
@@ -1783,9 +1903,8 @@ The default is
 .BR en .
 .IP
 Note that this option does \fBnot\fP specify the `input language', which is
-the language used to process events in the 
-.I \.calendar
-(pcal configuration) file ('English', by default, unless changed with the
+the language used to process events in the configuration file ('English', by
+default, unless changed with the
 .I input-language XX
 directive).  See the section
 .I The Date File
@@ -1884,6 +2003,12 @@ Select the default typeface
 flag may be specified multiple times within the date file
 (via "opt") to reset the font style on the fly \(em for example, to
 print all holidays in Bold.
+
+.TP
+.BR \-W " [left|center|right]"
+Specify the horizontal alignment of the month/year heading (left, center,
+right) (for monthly-format calendars only).
+
 .PP
 Any option taking a negative value (e.g.
 .BR "\-Y \-###")
@@ -1927,9 +2052,7 @@ is defined, its contents are parsed as a command line.  Flags set via
 .BR PCAL_OPTS
 override the program defaults, but are overridden by options set via 
 .B opt
-lines in the
-.I \.calendar
-file or explicitly on the command line.
+lines in the configuration file or explicitly on the command line.
 
 .\" ------------------------------------------------------------------
 
@@ -1983,9 +2106,7 @@ consider January 1990:
 .fi
 .ft
 .IP \  2
-If the
-.I \.calendar
-file looked like this:
+If the configuration file looked like this:
 .PP
 .ft CW
 .nf
@@ -1996,8 +2117,7 @@ file looked like this:
 .IP \  2
 \&\.\.\. then
 .I pcal
-would mark the 15th as ``payday'' since at that point in the
-.I \.calendar
+would mark the 15th as ``payday'' since at that point in the configuration
 file it has no way of knowing that January 15th will later be flagged as a
 holiday.  If the two lines were reversed, such that the holiday preceded the
 ``workday'' wildcard, then
@@ -2089,7 +2209,7 @@ distributions these days.
 For more information on PostScript, consult the free, online Adobe book
 entitled
 .IR "PostScript Language Reference Manual" , 
-which can be found here (as of Jul 2006):
+which can be found here (as of Dec 2007):
 .RS
 .LP
 .IR http://partners.adobe.com/public/developer/ps/index_specs.html
@@ -2106,12 +2226,12 @@ Tessin, Joe Wood, Jeff Mogul, Mark Hanson, and others whose names have
 regrettably been lost.  This C version was originally created by Ken Keirnan
 of Pacific Bell; additional enhancements by Joseph P. Larson, Ed Hand, Andrew
 Rogers, Mark Kantrowitz, Joe Brownlee, Andy Fyfe, Steve Grandi, Geoff
-Kuenning, Stefan Fronzek (1-column HTML output), Don Laursen (`Friday the
-13th' events), Bill Bogstad (event deletion capability), and Bill Marr
-(embedded EPS images, command-line paper size specification, new paper sizes
-[legal & tabloid], additional character mappings for new languages, and
-various cleanups).  The moon routines were originally written by Jef Poskanzer
-and Craig Leres, and were incorporated into
+Kuenning, Stefan Fronzek (1-column HTML output), Bill Bogstad (event deletion
+capability), and Bill Marr (embedded EPS images, command-line paper size
+specification, new paper sizes [legal & tabloid], additional character
+mappings for new languages, and various cleanups).  The moon routines were
+originally written by Jef Poskanzer and Craig Leres, and were incorporated
+into
 .I pcal
 by Richard Dyson.  International language support was initially added by
 Angelo Haritsis.  Additional languages were added by Andrew Rogers
@@ -2119,5 +2239,5 @@ Angelo Haritsis.  Additional languages were added by Andrew Rogers
 Fredrikson (Swedish), Volodymyr M. Lisivka (Ukrainian), Neeme Praks (Estonian,
 Russian, Latvian, Lithuanian), Peter Cernoch (Czech), Ferenc Kruzslicz
 (Hungarian), Carles Sadurní Anguita (Catalan), Dominik 'Chiron' Derlatka
-(Polish), Ewald Beekman (Dutch), Claudiu Costin (Romanian), and Kenneth
-Geisshirt (Danish).
+(Polish), Ewald Beekman (Dutch), Claudiu Costin (Romanian), Kenneth Geisshirt
+(Danish), Zdenko Podobny (Slovak), and Eric Nichols (Hawaiian).
